--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/Saraesabbagh/2iChallenge#readme",
   "dependencies": {
     "jest": "^29.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.24.0"
   }
 }
